[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "duckdb>=1.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-calamine>=0.6.1",
    "streamlit>=1.53.0",
    "streamlit-extras>=0.7.8",
]
